gulp and example twig layout

--- a/app/views/index.twig
+++ b/app/views/index.twig
@@ -1,1 +1,5 @@
-<a href="{{ urlFor('index') }}">Home</a>
+{% extends 'layouts/default.twig' %}
+
+{% block content %}
+  <a href="{{ urlFor('index') }}" style="">Hello</a>
+{% endblock %}
